Streamline indexing pipeline and improve CLI handling

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,10 @@
-# Основные зависимости для RAG проекта
-# Обновляйте по мере необходимости
+# Минимальный набор зависимостей для локального RAG пайплайна
 
-# Основные библиотеки
-numpy>=1.21.0
-pandas>=1.3.0
-scikit-learn>=1.0.0
+chromadb>=0.5.0
+numpy>=1.24.0
+torch>=2.0.0
+transformers>=4.36.0
+tqdm>=4.66.0
 
-# NLP и ML
-transformers>=4.20.0
-torch>=1.12.0
-sentence-transformers>=2.2.0
-faiss-cpu>=1.7.0
-
-# Векторные базы данных
-chromadb>=0.3.0
-pinecone-client>=2.0.0
-
-# Веб-фреймворк (если нужен API)
-fastapi>=0.78.0
-uvicorn>=0.18.0
-
-# Утилиты
-python-dotenv>=0.19.0
-tqdm>=4.64.0
-requests>=2.28.0
-
-# Разработка и тестирование
-pytest>=7.0.0
-pytest-cov>=3.0.0
-black>=22.0.0
-flake8>=4.0.0
-
-# Jupyter для экспериментов
-jupyter>=1.0.0
-ipykernel>=6.0.0
+# Дополнительные инструменты можно установить при необходимости:
+# pip install ".[dev]" или вручную (pytest, black, jupyter и т.п.)
