Добавлена поддержка загрузки переменных окружения из .env файла в config.py, улучшен параметр DEFAULT_EMBEDDING_BATCH_SIZE для конфигурируемого батча в rag_index.py. В rag_query_final.py и rag_query_with_llm.py добавлена валидация входных данных, что повышает безопасность и надежность системы. Обновлены зависимости в requirements.txt для поддержки python-dotenv.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy>=1.24.0
 torch>=2.0.0
 transformers>=4.36.0
 tqdm>=4.66.0
+python-dotenv>=1.0.0
 
 # Дополнительные инструменты можно установить при необходимости:
 # pip install ".[dev]" или вручную (pytest, black, jupyter и т.п.)
